# Synthetic-Arbitrage-Detection-Engine

./: .gitignore  CMakeLists.txt  Phases.md  README.md
src/: dashboard_demo.cpp  phase2_demo.cpp  phase8_integration_demo.cpp
src/core/: CMakeLists.txt  PricingEngine.cpp
src/data/: BinanceClient.hpp  BybitClient.hpp  CMakeLists.txt  MarketData.hpp  OKXClient.hpp  WebSocketClient.cpp  WebSocketClient.hpp
src/ui/: DashboardApp.cpp  DashboardApp.hpp  HttpServer.cpp
